# NOC

./: README.md
NOC/: CMakeLists.txt  package.xml
lqr_control/: CMakeLists.txt  package.xml
lqr_control/config/: traj.rviz  traj_anime_mode.rviz
lqr_control/include/lqr_control/: Hydrus_Dynamics.h  LqrDiscreteBase.h  LqrFD.h  LqrFD_Quadrotor.h  LqrID_Quadrotor.h  QuadrotorSimulator.h  SlqFD_Hydrus.h  SlqFD_Quadrotor.h
lqr_control/launch/: quadrotor_slq_simulator.launch
lqr_control/script/: dareSolver.py
lqr_control/src/: Hydrus_Dynamics.cpp  LqrDiscreteBase.cpp  LqrFD.cpp  LqrFD_Quadrotor.cpp  LqrID_Quadrotor.cpp  QuadrotorSimulator.cpp  SlqFD_Hydrus.cpp  SlqFD_Quadrotor.cpp  hydrus_test_node.cpp  quadrotor_simulator_node.cpp
lqr_control/srv/: Dare.srv
